--- a/app/src/main/res/values/strings_activity_login.xml
+++ b/app/src/main/res/values/strings_activity_login.xml
@@ -6,6 +6,7 @@
     <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in">Log in with Github</string>
     <string name="action_continue">Yup that\'s me</string>
-    <string name="error_invalid_email">This username doesn\'t look right...</string>
+    <string name="error_invalid_username">This username doesn\'t look right…</string>
+    <string name="error_username_not_found">We can\'t find that username</string>
     <string name="error_field_required">This field is required</string>
 </resources>
