--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="uk.co.jordanrobinson.githubstreakreminders.MainActivity$PlaceholderFragment"
-    android:background="#333839">
+    android:background="#333839"
+    android:id="@+id/main_home">
 
     <TextView android:id="@+id/home_heading"
         android:layout_width="wrap_content"
